<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="email_address">Email address</string>
    <string name="firstname">First Name</string>
    <string name="width">Width</string>
    <string name="plot_no">Plot No</string>

    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="sectors_list">
        <item>Sector 78</item>
        <item>Sector 79</item>
        <item>Sector 80</item>
        <item>Sector 140</item>
        <item>Sector 178</item>
    </string-array>
    <string-array name="role_list">
        <item>
            User
        </item>
        <item>
            Sector Representative
        </item>
        <item>
            Admin
        </item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="post_list">
        <item>
            Others
        </item>
    </string-array>
    <string-array name="month_list">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="years_list">
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>

</resources>