<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">
    <ImageView
        android:id="@+id/image"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="175dp"
        android:layout_marginStart="175dp"
        android:src="@drawable/ic_member_form"/>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="680dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:background="@color/primaryDark"
        android:text="Submit"
        android:textStyle="bold"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="100dp"
        android:textColor="@android:color/white"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="680dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:background="@color/primaryDark"
        android:text="Cancel" />

    <EditText
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="80dp"
        android:autofillHints="@string/firstname"
        android:background="@drawable/buttonst"
        android:hint="First Name"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/InputLastname"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="130dp"
        android:autofillHints="@string/last_name"
        android:background="@drawable/buttonst"
        android:hint="Last Name"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/InputMobile"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="220dp"
        android:autofillHints="@string/mobile_number"
        android:background="@drawable/buttonst"
        android:hint="Mobile Number"
        android:inputType="phone"
        android:paddingStart="10dp"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/inputSizeWidth"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:autofillHints="@string/width"
        android:background="@drawable/buttonst"
        android:hint="@string/width"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/inputSizeDepth"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="90dp"
        android:layout_marginRight="70dp"
        android:autofillHints="@string/width"
        android:background="@drawable/buttonst"
        android:hint="Depth"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/inputPlotNumber"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="200dp"
        android:layout_marginRight="200dp"
        android:autofillHints="@string/plot_no"
        android:background="@drawable/buttonst"
        android:hint="Plot No"
        android:inputType="number"
        android:paddingStart="10dp"
        android:paddingLeft="10dp" />

    <EditText
        android:id="@+id/inputAddress"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="425dp"
        android:autofillHints="@string/address"
        android:background="@drawable/buttonst"
        android:hint="Address"
        android:inputType="text|textMultiLine"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="570dp"
        android:autofillHints="@string/email_address"
        android:background="@drawable/buttonst"
        android:hint="EMAIL"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="620dp"
        android:autofillHints="Password"
        android:background="@drawable/buttonst"
        android:hint="Password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="470dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add_profile"
        android:hint="@string/profile_photo"
        android:onClick="pickImage"
        tools:ignore="OnClick" />

    <RadioGroup
        android:id="@+id/radiobuttonG1"
        android:layout_width="227dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:background="@drawable/buttonst"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="73dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="Male" />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="73dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="Female" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radiobuttonG2"
        android:layout_width="227dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="280dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:background="@drawable/buttonst"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioHome"
            android:layout_width="73dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:text="Home" />

        <RadioButton
            android:id="@+id/radioPlot"
            android:layout_width="73dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:text="Plot" />
    </RadioGroup>

    <Spinner
        android:id="@+id/spinnerSector"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/buttonst"
        android:hint="Sector"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/RoleSpinner"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="475dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints="role"
        android:background="@drawable/buttonst"
        android:hint="role"
        android:spinnerMode="dropdown" />

    <Spinner
        android:id="@+id/PostSpinner"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:autofillHints="post"
        android:background="@drawable/buttonst"
        android:hint="post"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="80dp"
        android:text="First name"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="130dp"
        android:text="Last Name"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="180dp"
        android:text="Gender"
        android:textColor="#000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="220dp"
        android:text="Mobile No"
        android:textColor="#000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/plothomeEdit"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="320dp"
        android:textStyle="bold"
        android:textColor="#000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="380dp"
        android:text="Plot No"
        android:textColor="#000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="Sector*"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="420dp"
        android:text="Address"
        android:textColor="#000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="490dp"
        android:text="Profile Photo"
        android:textColor="#000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="480dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="Role"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="Post"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="580dp"
        android:textColor="#000"
        android:text="Email"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:textColor="#000"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="620dp"
        android:text="Password"
        android:textStyle="bold" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_centerInParent="true">
        <ProgressBar
            android:id="@+id/progressbar"
            android:background="@drawable/progress_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:elevation="8dp"
            />
    </RelativeLayout>
</RelativeLayout>
</ScrollView>